lection4/main.tf
data "aws_ami" "centos" {
  owners      = ["679593333241"]
  most_recent = true

  filter {
    name   = "name"
    values = ["CentOS Linux 7 x86_64 HVM EBS *"]
  }

  filter {
    name   = "architecture"
    values = ["x86_64"]
  }

  filter {
    name   = "root-device-type"
    values = ["ebs"]
  }
}

resource "aws_iam_user" "developer-test" {
  name = "grade-test-super-user"
  path = "/system/"

  tags = {
    tag-key = "tag-value"
  }
}

resource "aws_key_pair" "generated_key" {
  public_key = file("../../.ssh/id_rsa.pub")
}

resource "aws_security_group" "allow_ssh_http_https" {
  name        = "allow_ssh_test"
  description = "Allow ssh inbound traffic"

  ingress {
    description = "Ssh from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "http from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }
  ingress {
    description = "TLS from VPC"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_ssh_test"
  }
}

resource "aws_instance" "web" {
  ami           = data.aws_ami.centos.id
  instance_type = local.workspace["instance_type"]
  key_name      = aws_key_pair.generated_key.key_name
  vpc_security_group_ids = ["${aws_security_group.allow_ssh_http_https.id}"]

  tags = {
    Name = "HelloWorld"
  }
  
  ebs_block_device {
    device_name = "/dev/xvdb"
    volume_size = "1"
    volume_type = "standard"
  }

  ebs_block_device {
    device_name = "/dev/xvdc"
    volume_size = "1"
    volume_type = "standard"
  } 
  
  ebs_block_device {
    device_name = "/dev/xvdd"
    volume_size = "1"
    volume_type = "standard"
  } 
  
  connection {
    type     = "ssh"
    user     = "centos"
    password = ""
    host     = aws_instance.web.public_ip
  }
  

   provisioner "file" {
    source      = "raid0_initial.sh"
    destination = "/var/tmp/raid0_initial.sh"
  }

  provisioner "remote-exec" {
    inline = [
      "chmod +x /var/tmp/raid0_initial.sh",
      "/bin/bash /var/tmp/raid0_initial.sh",
    ]
  }

}
